--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "just-tech-news",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maxhealy01/just-tech-news.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/maxhealy01/just-tech-news/issues"
-  },
-  "homepage": "https://github.com/maxhealy01/just-tech-news#readme",
-  "start": "node server.js",
-  "dependencies": {
-    "bcrypt": "^5.0.0",
-    "connect-session-sequelize": "^7.0.4",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
-    "express-session": "^1.17.1",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
-  }
+	"name": "just-tech-news",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"test": "jest"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/maxhealy01/just-tech-news.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/maxhealy01/just-tech-news/issues"
+	},
+	"homepage": "https://github.com/maxhealy01/just-tech-news#readme",
+	"start": "node server.js",
+	"dependencies": {
+		"bcrypt": "^5.0.0",
+		"connect-session-sequelize": "^7.0.4",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-handlebars": "^5.2.0",
+		"express-session": "^1.17.1",
+		"mysql2": "^2.2.5",
+		"sequelize": "^6.3.5"
+	},
+	"devDependencies": {
+		"jest": "^26.6.3"
+	}
 }
